# legume

./: README.md  pyproject.toml
legume/: legume.py  test.py  tui.py
