[tool.poetry]
name = "legume"
version = "0.1.0"
description = ""
authors = ["Jay Heidecker <jay.heidecker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
textual = "^0.30.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
